--- a/awesome-exercise-4/package.json
+++ b/awesome-exercise-4/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "firebase": "^9.0.2",
     "quasar": "^1.0.0-beta.0"
   },
   "devDependencies": {
